home component implemented

--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -3,8 +3,9 @@
     ><a><img class="logo" src="assets/img/logo.png" alt="logo" /></a
   ></span>
   <span class="title-group"
-    ><a
-      ><i class="material-icons">home</i> CRUD Application Angular-Test</a
-    ></span
+    ><a>
+      <i class="material-icons">home</i> Home
+      <!-- <i class="material-icons">home</i> CRUD Application Angular-Test -->
+    </a></span
   ></mat-toolbar
 >
