--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -4,10 +4,11 @@
     mode="side"
     opened
     fixedInViewport="true"
-    fixedTopGap="68"
+    fixedTopGap="64"
     ><mat-nav-list class="nav-list">
       <a mat-list-item><i class="material-icons">home</i>Home</a>
       <a mat-list-item><i class="material-icons">storefront</i>Products</a>
     </mat-nav-list></mat-sidenav
-  ></mat-sidenav-container
->
+  ><mat-sidenav-content class="content"
+    ><app-home></app-home></mat-sidenav-content
+></mat-sidenav-container>
