--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,11 +1,9 @@
 <mat-toolbar class="header mat-elevation-z3"
   ><span
-    ><a><img class="logo" src="assets/img/logo.png" alt="logo" /></a
+    ><a routerLink="/"
+      ><img class="logo" src="assets/img/logo.png" alt="logo" /></a
   ></span>
   <span class="title-group"
-    ><a>
-      <i class="material-icons">home</i> Home
-      <!-- <i class="material-icons">home</i> CRUD Application Angular-Test -->
-    </a></span
+    ><a> <i class="material-icons">home</i> Home </a></span
   ></mat-toolbar
 >
