some structural & attribute directives implemented

--- a/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/src/app/components/template/footer/footer.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar class="footer"
   ><span
-    >Developed with <i class="material-icons red v-middle">favorite</i> by
+    >Developed with <i class="material-icons v-middle" appRed>favorite</i> by
     <strong>Cod<span class="red">3</span>r</strong> and<strong>
       JV</strong
     ></span
-  ></mat-toolbar
->
+  >
+</mat-toolbar>
