--- a/frontend/src/app/views/home/home.component.html
+++ b/frontend/src/app/views/home/home.component.html
@@ -2,5 +2,8 @@
   ><mat-card-title class="title">Welcome!</mat-card-title
   ><mat-card-subtitle class="subtitle"
     >Basic CRUD with Angular</mat-card-subtitle
-  ></mat-card
+  >
+  <ul>
+    <li *myFor="let n; em: [1, 2, 3]">{{ n }}</li>
+  </ul></mat-card
 >
